task: fix scrollbar leftpanel

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -40,7 +40,7 @@ body {
   }
   .tooltip {
     width: 80px;
-    position: absolute;
+    position: fixed;
     text-align: center;
     padding: 5px;
   }
@@ -206,7 +206,6 @@ body {
     left: 0px;
     &.active { left: -260px; }
     .container-spot-left-panel {
-      height: 100%;
       overflow: auto;
     }
     .child-panel {
